Fix Margin top gap for small devices

--- a/app/styles/templates/items/detail/_publishing_tab.scss
+++ b/app/styles/templates/items/detail/_publishing_tab.scss
@@ -68,6 +68,7 @@
     overflow-y: scroll;
 
     @media #{$small-only} {
+      margin-top: -1.5em;
       margin-right: 10%;
     }
 
